--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="main">
         <div class="main_div">
             <div class="heading">
-                <h1>Caculator</h1>
+                <h1>Akash's Caculator</h1>
             </div>
             <input type="text" value="0" id="inpt"> 
             <div class="buttons">
